# 868-train

./: .gitignore  CODEX_RULES.md  HYBRID_TASKS.md  README.md  TASKS.md  pyproject.toml
notes/: ghidra_findings.md
src/: app.py  cli.py
src/agent/: README_baseline_heuristic.md  README_baseline_random.md  README_dqn_agent.md  README_dqn_agent_eli5.md  README_re_heuristic.md  baseline_heuristic.py  baseline_random.py  dqn_agent.py  re_heuristic.py  re_heuristic_loop.py
src/config/: binary_fingerprint.json  fingerprint.py  (+3 more)
tests/: test_action_api.py  test_baseline_agents.py  test_baseline_training.py  test_cli.py  test_dqn_agent.py  test_dqn_policy_runner.py  test_dqn_runner_gui.py  test_enemy_spawn_suppression.py  test_fail_detector.py  test_fingerprint.py  test_game_env.py  test_game_tick_speedup.py  test_heuristic_policy_runner.py  test_hybrid_astar.py  test_hybrid_checkpoint.py  test_hybrid_coordinator.py  test_hybrid_env.py  test_hybrid_rewards.py  test_hybrid_runner.py  test_hybrid_runner_gui.py  test_hybrid_threat_controller.py  test_input_driver.py  test_memory_reader.py  test_memory_validators.py  test_offsets.py  test_pointer_chain.py  test_process_attach.py  test_random_policy_runner.py  test_re_heuristic_agent.py  test_re_heuristic_loop.py  test_re_heuristic_policy_runner.py  test_reset_manager.py  test_rewards.py  test_runner_tui.py  test_state_extractor.py  test_state_monitor_tui.py  test_telemetry_logger.py  test_threat_controller.py  test_training_evaluate.py  test_victory_transition_monitor.py  (+1 more)
train_868.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+59 files in other folders)
